# neurascreen

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-entrypoint.sh  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  demo-video.yml
docs/: cross-platform.md  docker.md  gui.md  macro-recorder.md  scenario-guide.md  subtitles-chapters.md
examples/: 01-simple-navigation.json  02-form-interaction.json  03-dashboard-walkthrough.json
examples/templates/: dashboard-walkthrough.json  feature-demo.json  login-demo.json
neurascreen/: __init__.py  __main__.py  assembler.py  browser.py  cli.py  config.py  macro.py  platform.py  recorder.py  scenario.py  subtitles.py  tts.py  utils.py
neurascreen/gui/: __init__.py  app.py  main_window.py  theme.py
neurascreen/gui/advanced/: __init__.py  autosave.py  diff_viewer.py  selector_validator.py  statistics.py
neurascreen/gui/config/: __init__.py  config_dialog.py  config_fields.py
neurascreen/gui/editor/: __init__.py  editor_widget.py  file_browser.py  json_view.py  step_detail.py  step_list.py  step_templates.py  syntax_highlighter.py  undo_commands.py
src/: __main__.py  assembler.py  browser.py  cli.py  config.py  narrator.py  scenario.py
tests/: conftest.py  test_assembler.py  test_cli_voices.py  test_config.py  test_docker.py  test_gui_advanced.py  test_gui_config.py  test_gui_editor.py  test_gui_execution.py  test_gui_macro.py  test_gui_output.py  test_gui_theme.py  test_gui_tts.py  test_macro.py  test_platform.py  test_scenario.py  test_subtitles.py  test_tts.py  test_utils.py
(+21 files in other folders)
