[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurascreen"
version = "1.3.0"
description = "Automated screen walkthrough video generator using Playwright, JSON scenarios and Text-to-Speech"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "NEURASCOPE", email = "contact@neurascope.ai" },
]
keywords = [
    "video-generator", "screen-capture", "playwright", "tts",
    "demo-video", "automation", "walkthrough",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.50.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
gradium = ["gradium>=0.5.0"]
all = ["gradium>=0.5.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
neurascreen = "neurascreen.cli:main"

[project.urls]
Homepage = "https://github.com/NEURASCOPE/neurascreen"
Repository = "https://github.com/NEURASCOPE/neurascreen"
Issues = "https://github.com/NEURASCOPE/neurascreen/issues"

[tool.setuptools.packages.find]
include = ["neurascreen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
